
* marks an incompatible change

library
  * improved bitvectors theories

Encodings
  * When a task has no polymorphic object (except for the special
    cases of equality and maps) then the translation to SMT-LIB
    format is direct

provers
  o discarded support for Alt-Ergo versions older than 0.95.2
  o support for Coq 8.4pl6 (released Apr 9, 2015)
  o support for Gappa 1.2.0 (released May 19, 2015)
  o support for Isabelle 2015 (released May 25, 2015)
  o support for Z3 4.4.0 (released Apr 29, 2015)
  o support for Zenon 0.8.0 (released Oct 21, 2014)
  o support for Zenon_modulo 0.4.1 (released Jul 2, 2015)

Version 0.86.2, October 13, 2015
================================

bug fixes
  o assorted bug fixes

Version 0.86.1, May 22, 2015
============================

IDE
  o improved task highlighting for negated premises
    (contributed by Mikhail Mandrykin, AstraVer project)

provers
  o support for Gappa 1.2 (released May 19, 2015)

bug fixes
  o why3doc: garbled output

version 0.86, May 11, 2015
==========================

core
  o steps limit for reliable replay of proofs, available for Alt-Ergo
    and CVC4
  o new transformations induction_pr and inversion_pr to reason with
    inductive predicates

library
  * renamed theory int.NumOfParam into int.NumOf; the predicate numof
    now takes some higher-order predicate as argument (no more need
    for cloning). Similar change in modules array.NumOf...
  * improved theory real.PowerReal
  o new theory: sequences
  o new theories for bitvectors, mapped to BV theories of SMT solvers
    Z3 and CVC4

provers
  o support for Coq 8.4pl5 (released Nov 7, 2014)
  o support for Z3 4.3.2 (released Oct 25, 2014)
  o support for MetiTarski 2.4 (released Oct 21, 2014)
  o support for Alt-Ergo 0.99.1 (released Dec 30, 2014)
  o support for Alt-Ergo 1.00.prv (released Jan 29, 2015)
  o support for veriT 201410 (released Nov 2014)
  o support for Psyche (experimental,