@@ -1,7 +1,12 @@
 
 * marks an incompatible change
 
-library
+Tools
+  * add a command-line option --extra-expl-prefix to specify
+    additional possible prefixes for VC explanations.  (Available for
+    why3 commands "prove" and "ide".)
+
+Library
   * improved bitvectors theories
 
 Encodings
@@ -9,7 +14,7 @@ Encodings
     cases of equality and maps) then the translation to SMT-LIB
     format is direct
 
-provers
+Provers
   o discarded support for Alt-Ergo versions older than 0.95.2
   o support for Coq 8.4pl6 (released Apr 9, 2015)
   o support for Gappa 1.2.0 (released May 19, 2015)
